WIP: Refactor (#15)
* Add basic admin role

* Add projects endpoint

* Refactor test

* add: coverage

* Fix codecov

* Fix codecov

* Fix codecov

* Fix codecov

* ft add dependabot

* Fix codecov

* Fix codecov

* Fix codecov

* Implement sendgrid email

* Add tests

* Updated config.yml

* update readme
