# src/routes/index.js
@@ -1,18 +1,20 @@
 import express from "express";
-import { SampleController } from "../controllers/";
+import { SampleController } from "../controllers";
 import messageRoutes from "./message";
 import articlesRoutes from "./articles";
+import projectsRoutes from "./project";
+
 import userRoutes from "./user";
 import authRoutes from "./auth";
-import { isLoggedIn } from "../middlewares/auth";
-import { is } from "express/lib/request";
+
 const router = express.Router();
 router.get("/", (request, response) => {
   response.status(200).json({ message: "Welcome" });
 });
 router.use("/messages", messageRoutes);
-router.use("/articles", isLoggedIn, articlesRoutes);
-router.use("/user", isLoggedIn, userRoutes);
+router.use("/articles", articlesRoutes);
+router.use("/projects", projectsRoutes);
+router.use("/user", userRoutes);
 router.use("/auth", authRoutes);
 router.use("*", SampleController.notFound);
 export default router;
